# openFleetPilot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: development_ci.yml
src/: main.cpp
